Implement second web-design lab

--- a/Year3/WebDesign/Lab1/index.html
+++ b/Year3/WebDesign/Lab1/index.html
@@ -155,7 +155,7 @@
 				<td>$50 000 000</td>
 			</tr>
 			<tr>
-				<td colspan="5">Загальний прибуток: $166 000 000</td>
+				<td colspan="4">Загальний прибуток: $166 000 000</td>
 			</tr>
 		</table>
 	</div>
@@ -182,10 +182,21 @@
 			  <option>Гість</option>
 			  <option selected>Зареєстрований</option>
 			  <option>Преміум-користувач</option>
-			</select>
+			</select> <br>
 
-			Категорія користувача:<br>
-			<textarea rows="10" cols="45" name="text"></textarea>
+			Текст запиту:<br>
+			<textarea rows="5" cols="35" name="request-text"></textarea>
+
+			Дата запиту:<br>
+  			<input type="date" name="request-date"><br>
+
+  			Вкладення:<br>
+  			<input type="file" name="attachments"><br>
+
+  			 Стаж користувача:<br>
+  			<input type="number" min="0" max="70" name="experience"><br>
+
+  			<input type="submit" value="Submit"><br>
 		  </fieldset>
 		</form>
 
@@ -194,6 +205,6 @@
 			<p>Сайт створено студентом групи КП-41</p>
 			<p>Використані технології: <mark>HTML</mark></p>
 		</details>
-		<a href="mailto: limethecoder@gmail.com">Звязок з менеджером</a>
+		<a href="mailto:limethecoder@gmail.com">Звязок з менеджером</a>
 	</div>
 </body>
